PossetInterpreter/src/test/resources/syntax-errors/same-name-for-sub-posset.pos
main
(
	'2 test;
	'3 test;
)